@@ -342,7 +342,7 @@
  *
  * AM=0xFFFF8 ATM=0 CSNT/SAM=1 ACS/G5LA/G5LS=3 BIH=1 SCY=2 SETA=0 TRLX=1 EHTR=1
  */
-#define ELIC_EPIC_BASE		0xFE000000
+#define ELIC_EPIC_BASE		0xFE008000
 #define ELIC_EPIC_OR_AM		0xFFFF8000
 #define ELIC_EPIC_TIMING	0x00000F26
 
